Deployed React App

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dante21196.github.io/TxtUtils"
+  "homepage": "https://dante21196.github.io/TxtUtils",
   "name": "txtutils",
   "version": "0.1.0",
   "private": true,
